--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -76,6 +76,15 @@
   <!--CameraActivity-->
   <string name="CameraActivity_image_save_failure">Αποτυχία αποθήκευσης της εικόνας.</string>
   <!--CameraContacts-->
+  <string name="CameraContacts_recent_contacts">Πρόσφατες επαφές</string>
+  <string name="CameraContacts_signal_contacts">Επαφές Signal</string>
+  <string name="CameraContacts_signal_groups">Ομάδες Signal</string>
+  <string name="CameraContacts_you_can_share_with_a_maximum_of_n_conversations">Μπορείτε να μοιραστείτε μέχρι με %d συνομιλίες.</string>
+  <string name="CameraContacts_select_signal_recipients">Επιλογή παραληπτών/τριών Signal</string>
+  <string name="CameraContacts_no_signal_contacts">Δεν υπάρχουν επαφές Signal</string>
+  <string name="CameraContacts_you_can_only_use_the_camera_button">Μπορείτε να χρησιμοποιήσετε το κουμπί κάμερα για να στείλετε φωτογραφίες μόνο σε επαφές Signal.</string>
+  <string name="CameraContacts_cant_find_who_youre_looking_for">Δεν μπορείτε να βρείτε αυτό που ψάχνετε;</string>
+  <string name="CameraContacts_invite_a_contact_to_join_signal">Προσκαλέστε μια επαφή σας να έρθει στο Signal</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Αφαίρεση</string>
   <string name="ClearProfileActivity_remove_profile_photo">Αφαίρεση φωτογραφίας προφίλ?</string>
@@ -410,7 +419,9 @@
   <string name="MediaSendActivity_camera_unavailable">Η κάμερα δεν είναι διαθέσιμη.</string>
   <string name="MediaSendActivity_message_to_s">Μήνυμα προς τον/την %s</string>
   <string name="MediaSendActivity_message">Μήνυμα</string>
+  <string name="MediaSendActivity_select_recipients">Επιλογή παραληπτών/τριών</string>
   <string name="MediaSendActivity_signal_needs_access_to_your_contacts">Το Signal χρειάζεται πρόσβαση στις επαφές σας για να μπορέσει να τις εμφανίσει. </string>
+  <string name="MediaSendActivity_signal_needs_contacts_permission_in_order_to_show_your_contacts_but_it_has_been_permanently_denied">Το Signal χρειάζεται τα δικαιώματα Επαφών για να μπορούμε να εμφανίσουμε τις επαφές σας, αλλά αυτά δεν έχουν δοθεί μόνιμα. Παρακαλώ πηγαίνετε στις ρυθμίσεις εφαρμογών, επιλέξτε τα \"Δικαιώματα\", και ενεργοποιήστε τις \"Επαφές\".</string>
   <plurals name="MediaSendActivity_cant_share_more_than_n_items">
     <item quantity="one">Δεν μπορείτε να μοιραστείτε πάνω από %d αντικείμενο.</item>
     <item quantity="other">Δεν μπορείτε να μοιραστείτε πάνω από %d αντικείμενα.</item>
@@ -550,6 +561,8 @@
   <string name="RegistrationActivity_enter_the_code_we_sent_to_s">Εισάγετε τον κωδικό που στείλαμε στο %s</string>
   <string name="RegistrationActivity_call">Κλήση</string>
   <!--RevealableMessageView-->
+  <string name="RevealableMessageView_view_photo">Προβολή φωτογραφίας</string>
+  <string name="RevealableMessageView_viewed">Διαβάστηκε</string>
   <string name="RevealableMessageView_photo">Φωτογραφία</string>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Αποτυχία αποθήκευσης των αλλαγών της εικόνας</string>
@@ -611,6 +624,7 @@
   <string name="ThreadRecord_missed_call">Αναπάντητη κλήση</string>
   <string name="ThreadRecord_media_message">Μήνυμα πολυμέσων</string>
   <string name="ThreadRecord_sticker">Αυτοκόλλητο</string>
+  <string name="ThreadRecord_disappearing_photo">Φωτογραφία που εξαφανίζεται</string>
   <string name="ThreadRecord_s_is_on_signal">Ο/Η %s είναι στο Signal!</string>
   <string name="ThreadRecord_disappearing_messages_disabled">Τα μηνύματα που εξαφανίζονται απενεργοποιήθηκαν</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Ο χρόνος εξαφάνισης των μηνυμάτων ρυθμίστηκε σε %s</string>
@@ -685,6 +699,7 @@
   <string name="MessageNotifier_mark_read">Σημείωση ως αναγνωσμένο</string>
   <string name="MessageNotifier_media_message">Μήνυμα πολυμέσων</string>
   <string name="MessageNotifier_sticker">Αυτοκόλλητο</string>
+  <string name="MessageNotifier_disappearing_photo">Φωτογραφία που εξαφανίζεται</string>
   <string name="MessageNotifier_reply">Απάντηση</string>
   <string name="MessageNotifier_signal_message">Μήνυμα Signal</string>
   <string name="MessageNotifier_unsecured_sms">Μη ασφαλές SMS</string>
