--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -422,6 +422,7 @@ I suoi messaggi e le chiamate sono state disabilitate, si prega di provare e ri-
   <string name="MediaSendActivity_message">Messaggio</string>
   <string name="MediaSendActivity_select_recipients">Seleziona destinatari</string>
   <string name="MediaSendActivity_signal_needs_access_to_your_contacts">Signal richiede l\'accesso ai tuoi contatti per poterli mostrare.</string>
+  <string name="MediaSendActivity_signal_needs_contacts_permission_in_order_to_show_your_contacts_but_it_has_been_permanently_denied">Signal richiede l\'autorizzazione alla lettura dei contatti per permetterti la ricerca, ma è stata negata in modo permanente. Si prega di continuare con il menu delle impostazioni dell\'app, selezionare \"Autorizzazioni\" e abilitare \"Contatti\".</string>
   <plurals name="MediaSendActivity_cant_share_more_than_n_items">
     <item quantity="one">Non puoi condividere più di %d elemento.</item>
     <item quantity="other">Non puoi condividere più di %d elementi.</item>
