--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -403,6 +403,7 @@
   <string name="MediaSendActivity_message">訊息</string>
   <string name="MediaSendActivity_select_recipients">選擇收件人</string>
   <string name="MediaSendActivity_signal_needs_access_to_your_contacts">Signal 需要存取你的\"聯絡人\"以顯示聯絡人資訊。</string>
+  <string name="MediaSendActivity_signal_needs_contacts_permission_in_order_to_show_your_contacts_but_it_has_been_permanently_denied">Signal 需要聯絡人權限以顯示你的聯絡人，但是你已拒絕了該權限。請到應用程式設定，選擇\"權限\"，並開啟\"聯絡人\"。</string>
   <plurals name="MediaSendActivity_cant_share_more_than_n_items">
     <item quantity="other">你無法分享超過 %d 個項目。</item>
   </plurals>
